--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Index</title>
 </head>
+
+<!-- Body -->
+
 <body>
-    
+    <!-- Main header  -->
+    <header>
+
+        <a href="index.html" class="main_logo"> <img src="" alt=""></a>
+        <nav>
+
+        </nav>
+    </header>
 </body>
+
 </html>
