--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
     <!-- Main header  -->
     <header>
 
-        <a href="index.html" class="main_logo"> <img src="" alt=""></a>
-        <nav>
+        <a href="index.html" class="main_logo"> <img src="images/logo_header.svg" alt="logo"></a>
 
+
+        <nav class="header_nav">
+            <ul class="header_ul">
+                <li class="header_li"> <a href="index.html">Home</a></li>
+                <li class="header_li"><a href="">Post</a></li>
+                <li class="header_li"><a href="">Newsletter</a></li>
+            </ul>
         </nav>
     </header>
 </body>
