--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/stylesheet.css">
     <title>Index</title>
 </head>
 
@@ -20,12 +21,18 @@
 
         <nav class="header_nav">
             <ul class="header_ul">
-                <li class="header_li"> <a href="index.html">Home</a></li>
-                <li class="header_li"><a href="">Post</a></li>
-                <li class="header_li"><a href="">Newsletter</a></li>
+                <li class="header_li"> <a class="active" href="index.html">Home</a>
+                </li>
+
+                <li class="header_li middle_li"><a class="no_active" href="">Post</a></li>
+
+                <li class="header_li"><a class="no_active" href="">Newsletter</a></li>
             </ul>
         </nav>
     </header>
+ 
+    <!-- cover image  -->
+    <img src="images/cover (1).png" alt="cover1" class="cover_1">
 </body>
 
 </html>
