--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nerko+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <title>Index</title>
 </head>
 
@@ -30,9 +35,26 @@
             </ul>
         </nav>
     </header>
- 
+
     <!-- cover image  -->
     <img src="images/cover (1).png" alt="cover1" class="cover_1">
+
+    <section>
+        <img src="images/Rectangle 104.png" alt="section_img" class="section_image">
+
+        <article>
+            <h2 class="section_article_title">Bersama Lindungi Bumi Kita
+                Untuk Masa Depan</h2>
+            <p class="section_article_text">Kami bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan dunia yang
+                lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk menanam lebih dari 10 juta pohon
+                dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk menanam
+                lebih dari 10 juta pohon dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan semua.
+                Kami bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan dunia yang lebih indah dan asri
+                untuk kita, dia, dan semua.</p>
+        </article>
+    </section>
+
+
 </body>
 
 </html>
