--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
         <article>
             <h2 class="section_article_title">Bersama Lindungi Bumi Kita
                 Untuk Masa Depan</h2>
-            <p class="section_article_text">Kami bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan dunia yang
+            <p class="section_article_text">Kami bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan dunia
+                yang
                 lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk menanam lebih dari 10 juta pohon
                 dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk menanam
                 lebih dari 10 juta pohon dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan semua.
@@ -53,9 +54,32 @@
                 untuk kita, dia, dan semua.</p>
         </article>
 
-        
+
     </section>
 
+    <article class="article_2">
+        <h2 class="article_2_title">Tentang Kami</h2>
+        <p class="article_2_text">BERTUMBUH adalah organisasi non-profit yang mempunyai tujuan untuk Melindungi,
+            menjaga, merawat, dan melestarikan pohon-pohon yang ada di dunia serta kami akan terus menjaga kestabilan
+            bumi lewat penanaman dan penghijauan. Lewat penanaman dan penghijauan ini juga kita dapat mencegah berbagai
+            masalah seperti pemanasan global, polusi, banjir, tanah longsor serta terjaganya flora dan dan fauna yang
+            ada di dunia dan oleh dasar ini pula organisasi Bertumbuh dibuat. Kamu juga bisa membantu Bertumbuh dengan
+            cara menjadi relawan, petani serta kamu juga bisa berdonasi untuk mendukung kegiatan oprasional kami.</p>
+    </article>
+
+    <!-- Footer  -->
+    <footer>
+        <img src="images/logo (3).svg" alt="logo3" class="logo_3">
+
+        <nav>
+            <h2 class="nav_title">SUPPORT</h2>
+            <ul class="nav_ul">
+                <li class="nav_ul_li">Contact Us</li>
+                <li class="nav_ul_li">Terms of Service</li>
+                <li class="nav_ul_li">Privacy Policy</li>
+            </ul>
+        </nav>
+    </footer>
 
 </body>
 
