--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                 lebih dari 10 juta pohon dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan semua.
                 Kami bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan dunia yang lebih indah dan asri
                 untuk kita, dia, dan semua.</p>
+                
+                <button>Read more</button>
         </article>
 
 
@@ -65,6 +67,7 @@
             masalah seperti pemanasan global, polusi, banjir, tanah longsor serta terjaganya flora dan dan fauna yang
             ada di dunia dan oleh dasar ini pula organisasi Bertumbuh dibuat. Kamu juga bisa membantu Bertumbuh dengan
             cara menjadi relawan, petani serta kamu juga bisa berdonasi untuk mendukung kegiatan oprasional kami.</p>
+          
     </article>
 
     <!-- Footer  -->
